# OS_Lab10

./: CMakeLists.txt  OS_Lab10.code-workspace  Q1.c  Q2.c  Q3.c  Q4.c  README.md  a.out
